Removed specific Z-index assignments in attempt to fix styling issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,7 +49,7 @@ img {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
-  z-index: -2;
+  /* z-index: -2; */
 }
 
 
